--- a/beta/index.html
+++ b/beta/index.html
@@ -3,25 +3,24 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>후추 | 온투업(P2P) 담보대출 통계 (베타)</title>
-  <meta name="description" content="온라인투자연계금융업 중앙기록관리기관 공시자료를 바탕으로, 온투업 담보대출 현황을 한눈에 정리한 페이지입니다.">
+  <title>후추 | 온투업(P2P) 관리자 (베타)</title>
+  <meta name="description" content="온투업 담보대출 네비게이션 설정 및 중앙기록관리기관 통계 데이터를 관리하는 베타 관리자 페이지입니다.">
 
-  <!-- 공용 스타일 -->
-  <link rel="stylesheet" href="/assets/styles.css?v=20251206-beta-home" />
+  <!-- 기존 베타 공통 스타일 -->
+  <link rel="stylesheet" href="/assets/styles.css?v=20251117-beta" />
+  <!-- 관리자 전용 스타일 -->
+  <link rel="stylesheet" href="/assets/admin-beta.css?v=20251224-ltvup1" />
 
-  <!-- Chart.js (도넛 차트용) -->
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
-  <!-- 베타 홈 전용 JS -->
-  <script type="module" src="/assets/home-beta.js?v=20251211-home"></script>
+  <!-- 관리자 전용 스크립트 -->
+  <script type="module" src="/assets/admin-beta.js?v=20251218-fix1"></script>
 </head>
 <body class="beta-body">
 
-  <!-- 상단 헤더: 로고 + MENU 버튼 -->
+  <!-- ===== 상단 헤더 (베타 공통) ===== -->
   <header class="huchu-header beta-header" role="banner">
     <div class="huchu-header__inner beta-header__inner">
       <!-- 로고 -->
-      <a href="/beta/index.html" class="huchu-logo" aria-label="후추 Huchu 홈">
+      <a href="/" class="huchu-logo" aria-label="후추 Huchu 홈">
         <img class="logo-img" src="/assets/logo/huchu-logo.png" alt="후추 로고" />
         <span class="logo-fallback">
           <span class="logo-mark">%</span>
@@ -30,118 +29,256 @@
       </a>
 
       <!-- MENU + 드롭다운 -->
-      <button
-        id="betaMenuToggle"
-        class="beta-menu-toggle"
-        type="button"
-        aria-haspopup="true"
-        aria-expanded="false"
-      >
+      <button id="betaMenuToggle"
+              class="beta-menu-toggle"
+              type="button"
+              aria-haspopup="true"
+              aria-expanded="false">
         <span class="beta-menu-toggle__label">MENU</span>
       </button>
 
-      <!-- 드롭다운: 처음에는 숨김 -->
       <div id="betaMenuPanel" class="beta-menu-panel hide">
-        <a class="beta-menu-link" href="/beta/ontu-stats.html">온투업 대출통계</a>
-        <a class="beta-menu-link" href="/beta/products/index.html">온투업 대출상품정보</a>
-        <a class="beta-menu-link" href="/beta/navi-beta.html">후추 네비게이션</a>
-        <a class="beta-menu-link" href="/beta/company.html">회사소개</a>
-        <a class="beta-menu-link" href="/beta/contact.html">광고문의</a>
+        <a class="beta-menu-link" href="/beta/">온투업 대출통계</a>
+        <a class="beta-menu-link" href="/products/">온투업 대출상품정보</a>
+        <a class="beta-menu-link" href="/">담보대출 계산기</a>
+        <a class="beta-menu-link" href="/company.html">회사소개</a>
+        <a class="beta-menu-link" href="/contact.html">광고문의</a>
+        <a class="beta-menu-link" href="/beta/admin-beta.html">관리자(베타)</a>
       </div>
     </div>
   </header>
 
-  <!-- 메인 -->
+  <!-- ===== 메인 ===== -->
   <main class="beta-main">
     <div class="beta-inner">
+      <div class="admin-page">
 
-      <!-- 히어로 영역 -->
-      <section class="beta-hero">
-        <div class="beta-hero-grid">
+        <!-- 메인 타이틀 -->
+        <h1 class="admin-title">온투업 베타 관리자</h1>
+        <p class="admin-note">
+          후추 네비게이션(담보대출 길잡이)과 온투업 대출통계에 사용되는
+          <strong>기본 설정 데이터</strong>를 관리하는 페이지입니다.<br />
+          · 통계 데이터는 <code>/api/ontu-stats</code><br />
+          · 온투업체 네비게이션 설정은 <code>/api/loan-config</code> 로 저장/불러오기 됩니다.
+        </p>
 
-          <!-- 왼쪽: 메인 배너 (슬라이드) -->
-          <div class="beta-hero-banner" id="heroBanner">
-            <!-- 1번 배너 -->
-            <a
-              href="/beta/products/index.html"
-              class="beta-hero-banner__slide is-active"
-            >
-              <img
-                src="/assets/hero/banner1.png"
-                alt="온투업 담보대출 상품 통계 안내 배너"
-              />
-            </a>
-
-            <!-- 2번 배너 -->
-            <a
-              href="/beta/"
-              class="beta-hero-banner__slide"
-            >
-              <img
-                src="/assets/hero/banner2.png"
-                alt="온투업 담보대출 통계 요약 배너"
-              />
-            </a>
-
-            <!-- 좌우 화살표 네비게이션 -->
-            <button
-              class="hero-nav hero-nav--prev"
-              type="button"
-              aria-label="이전 배너"
-            >
-              《
-            </button>
-            <button
-              class="hero-nav hero-nav--next"
-              type="button"
-              aria-label="다음 배너"
-            >
-              》
-            </button>
-          </div>
-
-          <!-- 오른쪽: 향후 계산기 이용로그/통계 영역 (현재는 빈 공간으로 예약) -->
-          <div class="beta-hero-right beta-hero-right--empty">
-            <div class="beta-hero-placeholder">
-              <!-- 비워둔 상태. 나중에 계산기 이용 로그/통계 카드 들어올 자리 -->
-            </div>
-          </div>
-
+        <!-- 탭 버튼 -->
+        <div class="admin-tabs">
+          <button type="button" class="admin-tab-btn is-active" data-tab="stats">온투업 통계 저장</button>
+          <button type="button" class="admin-tab-btn" data-tab="lenders">온투업체 정보 등록</button>
         </div>
-      </section>
 
-      <!-- 통합 대출현황 대시보드 (대표 타이틀 + 5개 카드 구조) -->
-      <section class="beta-section">
-        <div class="beta-section-surface">
-
-          <!-- 대표 타이틀 한 줄 -->
-          <div class="beta-dashboard-header">
-            <h2 class="beta-dashboard-title">
-              <span class="beta-dashboard-title-main">온라인투자연계금융업 대출 현황</span>
-              <span id="dashboardMonth" class="beta-dashboard-title-month"></span>
-            </h2>
-          </div>
-
-          <!-- 메인 그리드: 좌측 4장 KPI 카드 / 우측 상품유형별 대출잔액 카드 -->
-          <div class="beta-dashboard-grid">
-            <!-- 왼쪽: 4개 KPI 카드 (렌더링 위치) -->
-            <div class="beta-dashboard-left">
-              <div id="ontuLoanStatus"></div>
+        <!-- ================== TAB 1: 온투업 통계 저장 ================== -->
+        <section id="admin-tab-stats" class="admin-tab-panel">
+          <div class="admin-card">
+            <div class="admin-field-group">
+              <h2 class="admin-field-title">1. 조회년월 선택</h2>
+              <p class="admin-note">
+                중앙기록관리기관 통계 기준 <strong>년/월</strong>을 선택하면,
+                기존에 저장된 데이터가 있을 경우 자동으로 불러옵니다.
+              </p>
+              <div class="admin-field">
+                <label for="statsMonth">조회년월</label>
+                <input type="month" id="statsMonth" class="admin-input admin-input-month" />
+              </div>
             </div>
 
-            <!-- 오른쪽: 상품유형별 대출잔액 카드 (도넛 + 유형별 금액) -->
-            <div class="beta-dashboard-right">
-              <div id="ontuProductSection" class="beta-product-section"></div>
+            <!-- 대출현황 summary -->
+            <div class="admin-field-group">
+              <h2 class="admin-field-title">2. 온투업 대출현황 요약</h2>
+              <p class="admin-note">
+                금융위 등록 온투업체 수, 데이터 수집 온투업체 수, 누적/잔액 금액을 입력해주세요.
+                금액은 원 단위이며, 3자리마다 쉼표는 자동으로 적용됩니다.
+              </p>
+
+              <div class="admin-field-grid">
+                <div class="admin-field">
+                  <label for="statsRegisteredFirms">금융위 등록 온투업체수</label>
+                  <input type="number" id="statsRegisteredFirms" min="0" class="admin-input" />
+                </div>
+                <div class="admin-field">
+                  <label for="statsDataFirms">데이터 수집 온투업체수</label>
+                  <input type="number" id="statsDataFirms" min="0" class="admin-input" />
+                </div>
+                <div class="admin-field">
+                  <label for="statsTotalLoan">누적대출금액 (원)</label>
+                  <input type="text"
+                         id="statsTotalLoan"
+                         class="admin-input"
+                         data-type="money"
+                         placeholder="예) 18358007760000" />
+                </div>
+                <div class="admin-field">
+                  <label for="statsTotalRepaid">누적상환금액 (원)</label>
+                  <input type="text"
+                         id="statsTotalRepaid"
+                         class="admin-input"
+                         data-type="money"
+                         placeholder="예) 16924144010000" />
+                </div>
+                <div class="admin-field">
+                  <label for="statsBalance">대출잔액 (원)</label>
+                  <input type="text"
+                         id="statsBalance"
+                         class="admin-input"
+                         data-type="money"
+                         placeholder="예) 1433867500000" />
+                </div>
+              </div>
+            </div>
+
+            <!-- 상품유형별 대출잔액 -->
+            <div class="admin-field-group">
+              <h2 class="admin-field-title">3. 상품유형별 대출잔액</h2>
+              <p class="admin-note">
+                전체 대출잔액 대비 <strong>비율(%)</strong>을 입력하면 금액(원)은 자동 계산됩니다.
+                (베타 통계 페이지에서는 조/억/만원 단위로 자동 포맷됩니다.)
+              </p>
+
+              <div class="admin-subbox">
+                <h3 class="admin-subbox-title">상품유형별 잔액 입력</h3>
+                <p class="admin-subbox-help">
+                  비율을 입력하면 잔액(원) 칸이 자동으로 채워집니다. 잔액 칸을 직접 수정하면
+                  비율과 일치하지 않을 수 있으니 가급적 비율 기준으로 입력하세요.
+                </p>
+
+                <table class="admin-table" style="width:100%;border-collapse:collapse;font-size:13px;">
+                  <thead>
+                    <tr style="border-bottom:1px solid #e5e7eb;">
+                      <th style="text-align:left;padding:6px 4px;">상품유형</th>
+                      <th style="text-align:right;padding:6px 4px;">비율 (%)</th>
+                      <th style="text-align:right;padding:6px 4px;">대출잔액 (원)</th>
+                    </tr>
+                  </thead>
+                  <tbody id="productRows">
+                    <tr data-key="부동산담보">
+                      <td style="padding:6px 4px;">부동산담보</td>
+                      <td style="padding:6px 4px;text-align:right;">
+                        <input type="number" class="admin-input js-ratio" data-key="부동산담보"
+                               min="0" max="100" step="0.1" placeholder="예) 43" />
+                      </td>
+                      <td style="padding:6px 4px;text-align:right;">
+                        <input type="text" class="admin-input js-amount" data-key="부동산담보" data-type="money" readonly />
+                      </td>
+                    </tr>
+
+                    <tr data-key="부동산PF">
+                      <td style="padding:6px 4px;">부동산PF</td>
+                      <td style="padding:6px 4px;text-align:right;">
+                        <input type="number" class="admin-input js-ratio" data-key="부동산PF" min="0" max="100" step="0.1" />
+                      </td>
+                      <td style="padding:6px 4px;text-align:right;">
+                        <input type="text" class="admin-input js-amount" data-key="부동산PF" data-type="money" readonly />
+                      </td>
+                    </tr>
+
+                    <tr data-key="어음·매출채권담보">
+                      <td style="padding:6px 4px;">어음·매출채권담보</td>
+                      <td style="padding:6px 4px;text-align:right;">
+                        <input type="number" class="admin-input js-ratio" data-key="어음·매출채권담보" min="0" max="100" step="0.1" />
+                      </td>
+                      <td style="padding:6px 4px;text-align:right;">
+                        <input type="text" class="admin-input js-amount" data-key="어음·매출채권담보" data-type="money" readonly />
+                      </td>
+                    </tr>
+
+                    <tr data-key="기타담보(주식 등)">
+                      <td style="padding:6px 4px;">기타담보(주식 등)</td>
+                      <td style="padding:6px 4px;text-align:right;">
+                        <input type="number" class="admin-input js-ratio" data-key="기타담보(주식 등)" min="0" max="100" step="0.1" />
+                      </td>
+                      <td style="padding:6px 4px;text-align:right;">
+                        <input type="text" class="admin-input js-amount" data-key="기타담보(주식 등)" data-type="money" readonly />
+                      </td>
+                    </tr>
+
+                    <tr data-key="개인신용">
+                      <td style="padding:6px 4px;">개인신용</td>
+                      <td style="padding:6px 4px;text-align:right;">
+                        <input type="number" class="admin-input js-ratio" data-key="개인신용" min="0" max="100" step="0.1" />
+                      </td>
+                      <td style="padding:6px 4px;text-align:right;">
+                        <input type="text" class="admin-input js-amount" data-key="개인신용" data-type="money" readonly />
+                      </td>
+                    </tr>
+
+                    <tr data-key="법인신용">
+                      <td style="padding:6px 4px;">법인신용</td>
+                      <td style="padding:6px 4px;text-align:right;">
+                        <input type="number" class="admin-input js-ratio" data-key="법인신용" min="0" max="100" step="0.1" />
+                      </td>
+                      <td style="padding:6px 4px;text-align:right;">
+                        <input type="text" class="admin-input js-amount" data-key="법인신용" data-type="money" readonly />
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+
+            <!-- 저장 버튼 -->
+            <div class="admin-field-group">
+              <button type="button" id="saveOntuStatsBtn" class="admin-save-btn">
+                온투업 통계 데이터 저장
+              </button>
+              <div id="statsSaveStatus" class="admin-save-status"></div>
             </div>
           </div>
+        </section>
 
-        </div>
-      </section>
+        <!-- ================== TAB 2: 온투업체 정보 등록 ================== -->
+        <section id="admin-tab-lenders" class="admin-tab-panel hide">
+          <div class="admin-card">
 
+            <div class="admin-field-group">
+              <h2 class="admin-field-title">1. 온투업체 기본 설정</h2>
+              <p class="admin-note">
+                온투업체별 <strong>신규대출 취급여부 / 제휴업체 여부</strong>,
+                <strong>취급 상품군</strong>, <strong>지역/유형별 LTV/대출종류</strong>,
+                <strong>상담 채널</strong> 등을 등록합니다.
+              </p>
+            </div>
+
+            <div class="admin-field-group">
+              <div class="admin-field">
+                <label for="lenderSearchInput">온투업체 검색</label>
+                <input id="lenderSearchInput"
+                       type="text"
+                       class="admin-input"
+                       placeholder="예) FM펀딩, 에잇퍼센트..." />
+              </div>
+            </div>
+
+            <div id="lendersList" class="admin-field-group"></div>
+
+            <div class="admin-field-group">
+              <div style="display:flex; gap:10px; flex-wrap:wrap; align-items:center;">
+                <button type="button" id="saveLendersConfigBtn" class="admin-save-btn">전체 저장</button>
+                <button type="button" id="downloadLoanConfigBtn" class="admin-save-btn" style="background:#374151;">
+                  백업 다운로드
+                </button>
+                <button type="button" id="uploadLoanConfigBtn" class="admin-save-btn" style="background:#6b7280;">
+                  백업 업로드
+                </button>
+                <input id="loanConfigFileInput" type="file" accept="application/json" style="display:none;" />
+              </div>
+
+              <div id="lendersSaveStatus" class="admin-save-status"></div>
+              <div id="lendersBackupStatus" class="admin-save-status" style="color:#6b7280;"></div>
+
+              <p class="admin-note" style="margin-top:8px;">
+                ※ 로컬 백업은 <strong>이 브라우저(PC/계정)</strong>에만 저장됩니다. 다른 PC/브라우저에서는 보이지 않아요.
+              </p>
+            </div>
+
+          </div>
+        </section>
+
+      </div>
     </div>
   </main>
 
-  <!-- 푸터 -->
+  <!-- ===== 푸터 (베타 공통) ===== -->
   <footer class="beta-footer" role="contentinfo">
     <div class="beta-footer__top">
       <a href="/company.html">회사소개</a>
@@ -150,11 +287,9 @@
     </div>
     <div class="beta-footer__bottom">
       <div class="beta-footer__brand">
-        <img
-          src="/assets/logo/huchu-logo-white.png"
-          alt="HUCHU 로고"
-          class="beta-footer__logo-img"
-        />
+        <img src="/assets/logo/huchu-logo-white.png"
+             alt="HUCHU 로고"
+             class="beta-footer__logo-img" />
         <span class="beta-footer__logo-text">HUCHU</span>
       </div>
       <div class="beta-footer__info">
