--- a/beta/admin-beta.html
+++ b/beta/admin-beta.html
@@ -9,7 +9,7 @@
   <!-- 기존 베타 공통 스타일 -->
   <link rel="stylesheet" href="/assets/styles.css?v=20251117-beta" />
   <!-- 관리자 전용 스타일 -->
-  <link rel="stylesheet" href="/assets/admin-beta.css?v=20251218-fix1" />
+  <link rel="stylesheet" href="/assets/admin-beta.css?v=20251224-ltvup1" />
 
   <!-- 관리자 전용 스크립트 -->
   <script type="module" src="/assets/admin-beta.js?v=20251218-fix1"></script>
