--- a/beta/index.html
+++ b/beta/index.html
@@ -103,8 +103,7 @@
           <!-- 오른쪽: 향후 계산기 이용로그/통계 영역 (현재는 빈 공간으로 예약) -->
           <div class="beta-hero-right beta-hero-right--empty">
             <div class="beta-hero-placeholder">
-              <!-- 비워둔 상태. 나중에 계산기 이용 로그/통계 카드 들어올 자리 -->
-            </div>
+<div id="naviStatsMount"></div></div>
           </div>
 
         </div>
