--- a/beta/navi-beta.html
+++ b/beta/navi-beta.html
@@ -188,11 +188,15 @@
           </div>
 
           <p id="naviAmountWarning" class="navi-warning" style="display:none;"></p>
+      <div class="navi-confirm-row">
+        <button id="naviConfirmBtn" type="button" class="btn btn-primary" disabled>결과 확인하기</button>
+        <span id="naviConfirmHint" class="navi-confirm-hint">필수 입력을 완료하면 활성화됩니다.</span>
+      </div>
         </div>
       </section>
 
       <!-- 6. 자동 계산 결과 요약 -->
-      <section class="beta-section navi-section" id="navi-step6">
+      <section class="beta-section navi-section hide" id="navi-step6">
         <div class="navi-section-title">6. 자동 계산 결과 요약</div>
         <div class="navi-section-sub">
           입력값을 기준으로 <strong>LTV·대출여력</strong>을 자동 계산합니다.
@@ -208,7 +212,7 @@
       </section>
 
       <!-- 6-1. 차주 추가정보 (선택) -->
-      <section class="beta-section navi-section" id="navi-step6-1">
+      <section class="beta-section navi-section hide" id="navi-step6-1">
         <div class="navi-section-title">6-1. 차주 추가정보 (선택)</div>
         <div class="navi-section-sub">
           아래 정보는 모두 선택하지 않아도 됩니다. 다만 많이 입력하실수록 보다 정확하게 온투업체를 매칭할 수 있습니다.
