--- a/beta/navi-beta.html
+++ b/beta/navi-beta.html
@@ -93,7 +93,7 @@
       </section>
 
       <!-- 2. 지역 선택 -->
-      <section class="beta-section navi-section" id="navi-step2">
+      <section class="beta-section navi-section hide" id="navi-step2">
         <div class="navi-section-title">2. 지역 선택</div>
         <div class="navi-section-sub">담보 또는 사업장이 위치한 지역을 선택해주세요.</div>
         <div class="navi-chip-group" id="naviRegionChips">
@@ -109,7 +109,7 @@
       </section>
 
       <!-- 3. 부동산 유형 선택 (부동산담보대출 일 때만) -->
-      <section class="beta-section navi-section" id="navi-step3">
+      <section class="beta-section navi-section hide" id="navi-step3">
         <div class="navi-section-title">3. 부동산 유형 선택</div>
         <div class="navi-section-sub">담보로 제공할 부동산의 유형을 선택해주세요.</div>
         <div class="navi-chip-group" id="naviPropertyTypeChips">
@@ -126,7 +126,7 @@
       </section>
 
       <!-- 4. 대출종류 선택 (부동산 담보대출 내부) -->
-      <section class="beta-section navi-section" id="navi-step4">
+      <section class="beta-section navi-section hide" id="navi-step4">
         <div class="navi-section-title">4. 대출종류 선택 (부동산 담보대출)</div>
         <div class="navi-section-sub">필요하신 부동산 담보대출의 세부 종류를 선택해주세요.</div>
         <div class="navi-chip-group" id="naviRealEstateLoanTypeChips">
@@ -139,7 +139,7 @@
       </section>
 
       <!-- 5. 대출 핵심정보 입력 -->
-      <section class="beta-section navi-section" id="navi-step5">
+      <section class="beta-section navi-section hide" id="navi-step5">
         <div class="navi-section-title">5. 대출 핵심정보 입력</div>
         <div class="navi-section-sub">
           선택하신 대출에 대한 기본 정보를 입력해주세요.
@@ -273,7 +273,7 @@
       </section>
 
       <!-- 7. 네비게이션 결과 -->
-      <section class="beta-section navi-section" id="navi-step7">
+      <section class="beta-section navi-section hide" id="navi-step7">
         <div class="navi-section-title">7. 네비게이션 결과</div>
 
         <div class="navi-card" id="naviResultWrapper">
