--- a/beta/index.html
+++ b/beta/index.html
@@ -157,9 +157,9 @@
         <span class="beta-footer__logo-text">HUCHU</span>
       </div>
       <div class="beta-footer__info">
-        <p>상호: (예시) 후추랩 | 대표: 장현성</p>
-        <p>주소: (예시) 경기도 고양시 일산동구 00로 00</p>
-        <p>E-MAIL: huchudb01@gmail.com | 사업자번호: 000-00-00000</p>
+        <p>상호: 후추랩 | 대표: 장현성</p>
+        <p>주소: 경기도 고양시 일산동구 정발산로 15, 4층 411호</p>
+        <p>E-MAIL: support@huchulab.com | 사업자번호: 546-03-03940</p>
         <p>2025 © HUCHU. ALL RIGHTS RESERVED.</p>
       </div>
     </div>
