--- a/beta/navi-beta.html
+++ b/beta/navi-beta.html
@@ -8,21 +8,16 @@
 
   <link rel="stylesheet" href="/assets/styles.css?v=20251117-beta" />
 
-  <!-- 캡처용 라이브러리 (이미지 저장 기능) -->
+    <link rel="stylesheet" href="/assets/navi-beta.css?v=20251229-opt2" />
+<!-- 캡처용 라이브러리 (이미지 저장 기능) -->
   <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 
-  <script type="module" src="/assets/navi-beta.js?v=20251226-beta6"></script>
+  <script type="module" src="/assets/navi-beta.js?v=20251229-opt2"></script>
 
   <!-- ✅ navi 초기 플래시 방지 + 레이아웃 폭 확장 -->
   <style>
     /* CSS 로드 전에도 hide 클래스가 즉시 적용되도록(FOUC 방지) */
     .hide { display: none !important; }
-
-    /* 넓은 화면에서 콘텐츠가 너무 중앙에 몰리는 문제 개선 */
-    body.navi-wide .beta-inner,
-    body.navi-wide .beta-header__inner {
-      max-width: none;
-    }
   </style>
 
 </head>
