--- a/beta/navi-beta.html
+++ b/beta/navi-beta.html
@@ -12,7 +12,7 @@
 <!-- 캡처용 라이브러리 (이미지 저장 기능) -->
   <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 
-  <script type="module" src="/assets/navi-beta.js?v=20251229-opt2"></script>
+  <script type="module" src="/assets/navi-beta.js?v=20251229-fix1"></script>
 
   <!-- ✅ navi 초기 플래시 방지 + 레이아웃 폭 확장 -->
   <style>
