--- a/beta/navi-beta.html
+++ b/beta/navi-beta.html
@@ -7,9 +7,9 @@
   <meta name="description" content="온투업(P2P) 담보대출·개인신용대출·스탁론 등 다양한 온투업 대출 상품을 조건에 맞게 탐색하고, 적합한 온투업체를 추천받는 후추 네비게이션(베타)입니다.">
 
   <link rel="stylesheet" href="/assets/styles.css?v=20251117-beta" />
+  <link rel="stylesheet" href="/assets/navi-beta.css?v=20251229-layout1" />
 
-    <link rel="stylesheet" href="/assets/navi-beta.css?v=20251229-opt2" />
-<!-- 캡처용 라이브러리 (이미지 저장 기능) -->
+  <!-- 캡처용 라이브러리 (이미지 저장 기능) -->
   <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 
   <script type="module" src="/assets/navi-beta.js?v=20251229-fix1"></script>
@@ -21,7 +21,7 @@
   </style>
 
 </head>
-<body class="beta-body navi-wide">
+<body class="beta-body">
 
   <!-- 상단 헤더 -->
   <header class="huchu-header beta-header" role="banner">
