--- a/beta/admin-beta.html
+++ b/beta/admin-beta.html
@@ -245,7 +245,7 @@
                 <input id="lenderSearchInput"
                        type="text"
                        class="admin-input"
-                       placeholder="예) FM펀딩, 에잇퍼센트..." />
+                       placeholder="예) 나모펀딩, 에잇퍼센트..." />
               </div>
             </div>
 
