--- a/beta/index.html
+++ b/beta/index.html
@@ -74,7 +74,7 @@
 
             <!-- 2번 배너 -->
             <a
-              href="https://namofunding.co.kr/loan/cons"
+              href="/beta/"
               class="beta-hero-banner__slide"
             >
               <img
