--- a/beta/index.html
+++ b/beta/index.html
@@ -7,13 +7,13 @@
   <meta name="description" content="온라인투자연계금융업 중앙기록관리기관 공시자료를 바탕으로, 온투업 담보대출 현황을 한눈에 정리한 페이지입니다.">
 
   <!-- 공용 스타일 -->
-  <link rel="stylesheet" href="/assets/styles.css?v=20251206-beta-home" />
+  <link rel="stylesheet" href="/assets/styles.css?v=20260105-mainfix2e8" />
 
   <!-- Chart.js (도넛 차트용) -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
   <!-- 베타 홈 전용 JS -->
-  <script type="module" src="/assets/home-beta.js?v=20251211-home"></script>
+  <script type="module" src="/assets/home-beta.js?v=20260105-mainfix2e8"></script>
 </head>
 <body class="beta-body">
 
@@ -116,7 +116,7 @@
           <!-- 대표 타이틀 한 줄 -->
           <div class="beta-dashboard-header">
             <h2 class="beta-dashboard-title">
-              <span class="beta-dashboard-title-main">온라인투자연계금융업 대출 통계</span>
+              <span class="beta-dashboard-title-main">온라인투자연계금융업 대출 현황</span>
               <span id="dashboardMonth" class="beta-dashboard-title-month"></span>
             </h2>
           </div>
