--- a/beta/ontu-stats.html
+++ b/beta/ontu-stats.html
@@ -24,6 +24,8 @@
       </a>
 
       <!-- MENU + 드롭다운 -->
+      <div class="beta-menu-wrap">
+
       <button id="betaMenuToggle"
               class="beta-menu-toggle"
               type="button"
@@ -32,13 +34,14 @@
         <span class="beta-menu-toggle__label">MENU</span>
       </button>
 
-      <div id="betaMenuPanel" class="beta-menu-panel hide">
-        <a class="beta-menu-link" href="/beta/ontu-stats.html">온투업 대출 통계</a>
-        <a class="beta-menu-link" href="/beta/products/index.html">온투업 대출상품 정보</a>
+<div id="betaMenuPanel" class="beta-menu-panel hide">
+        <a class="beta-menu-link" href="/beta/ontu-stats.html">온투업 대출통계</a>
+        <a class="beta-menu-link" href="/beta/products/index.html">온투업 대출상품정보</a>
         <a class="beta-menu-link" href="/beta/navi-beta.html">후추 네비게이션</a>
         <a class="beta-menu-link" href="/company.html">회사소개</a>
         <a class="beta-menu-link" href="/contact.html">광고문의</a>
-        <a class="beta-menu-link" href="/beta/admin-beta.html">관리자</a>
+      </div>
+
       </div>
     </div>
   </header>
