--- a/beta/index.html
+++ b/beta/index.html
@@ -10,10 +10,12 @@
   <link rel="stylesheet" href="/assets/styles.css?v=20260105-mainfix2e8" />
 
   <!-- Chart.js (도넛 차트용) -->
+  <script type="module" src="/assets/beta-shell.js?v=20260106-menu1"></script>
+
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
   <!-- 베타 홈 전용 JS -->
-  <script type="module" src="/assets/home-beta.js?v=20260105-mainfix2e8"></script>
+  <script type="module" src="/assets/home-beta.js?v=20260106-hb1"></script>
 </head>
 <body class="beta-body">
 
@@ -46,8 +48,8 @@
           <a class="beta-menu-link" href="/beta/ontu-stats.html">온투업 대출통계</a>
           <a class="beta-menu-link" href="/beta/products/index.html">온투업 대출상품정보</a>
           <a class="beta-menu-link" href="/beta/navi-beta.html">후추 네비게이션</a>
-          <a class="beta-menu-link" href="/beta/company.html">회사소개</a>
-          <a class="beta-menu-link" href="/beta/contact.html">광고문의</a>
+          <a class="beta-menu-link" href="/company.html">회사소개</a>
+          <a class="beta-menu-link" href="/contact.html">광고문의</a>
         </div>
       </div>
     </div>
