--- a/beta/ontu-stats.html
+++ b/beta/ontu-stats.html
@@ -8,6 +8,7 @@
   <meta name="description" content="온라인투자연계금융업(P2P) 담보대출의 누적 대출금액, 상환금액, 대출잔액과 상품유형별 대출잔액을 월별로 확인할 수 있는 대출 통계 페이지입니다.">
   <meta name="robots" content="noindex, nofollow" />
   <link rel="stylesheet" href="/assets/styles.css?v=20251203-ontu-stats-final" />
+  <script type="module" src="/assets/beta-shell.js?v=20260106-menu1"></script>
 </head>
 
 <body class="beta-body ontu-stats-page">
@@ -25,23 +26,23 @@
 
       <!-- MENU + 드롭다운 -->
       <div class="beta-menu-wrap">
+        <button
+          id="betaMenuToggle"
+          class="beta-menu-toggle"
+          type="button"
+          aria-haspopup="true"
+          aria-expanded="false"
+        >
+          <span class="beta-menu-toggle__label">MENU</span>
+        </button>
 
-      <button id="betaMenuToggle"
-              class="beta-menu-toggle"
-              type="button"
-              aria-haspopup="true"
-              aria-expanded="false">
-        <span class="beta-menu-toggle__label">MENU</span>
-      </button>
-
-<div id="betaMenuPanel" class="beta-menu-panel hide">
-        <a class="beta-menu-link" href="/beta/ontu-stats.html">온투업 대출통계</a>
-        <a class="beta-menu-link" href="/beta/products/index.html">온투업 대출상품정보</a>
-        <a class="beta-menu-link" href="/beta/navi-beta.html">후추 네비게이션</a>
-        <a class="beta-menu-link" href="/company.html">회사소개</a>
-        <a class="beta-menu-link" href="/contact.html">광고문의</a>
-      </div>
-
+        <div id="betaMenuPanel" class="beta-menu-panel hide">
+          <a class="beta-menu-link" href="/beta/ontu-stats.html">온투업 대출통계</a>
+          <a class="beta-menu-link" href="/beta/products/index.html">온투업 대출상품정보</a>
+          <a class="beta-menu-link" href="/beta/navi-beta.html">후추 네비게이션</a>
+          <a class="beta-menu-link" href="/company.html">회사소개</a>
+          <a class="beta-menu-link" href="/contact.html">광고문의</a>
+        </div>
       </div>
     </div>
   </header>
