--- a/beta/admin-beta.html
+++ b/beta/admin-beta.html
@@ -12,6 +12,8 @@
   <link rel="stylesheet" href="/assets/admin-beta.css?v=20251224-ltvup1" />
 
   <!-- 관리자 전용 스크립트 -->
+  <script type="module" src="/assets/beta-shell.js?v=20260106-menu1"></script>
+
   <script type="module" src="/assets/admin-beta.js?v=20251218-fix1"></script>
 </head>
 <body class="beta-body">
@@ -30,23 +32,23 @@
 
       <!-- MENU + 드롭다운 -->
       <div class="beta-menu-wrap">
+        <button
+          id="betaMenuToggle"
+          class="beta-menu-toggle"
+          type="button"
+          aria-haspopup="true"
+          aria-expanded="false"
+        >
+          <span class="beta-menu-toggle__label">MENU</span>
+        </button>
 
-      <button id="betaMenuToggle"
-              class="beta-menu-toggle"
-              type="button"
-              aria-haspopup="true"
-              aria-expanded="false">
-        <span class="beta-menu-toggle__label">MENU</span>
-      </button>
-
-<div id="betaMenuPanel" class="beta-menu-panel hide">
-        <a class="beta-menu-link" href="/beta/ontu-stats.html">온투업 대출통계</a>
-        <a class="beta-menu-link" href="/beta/products/index.html">온투업 대출상품정보</a>
-        <a class="beta-menu-link" href="/beta/navi-beta.html">후추 네비게이션</a>
-        <a class="beta-menu-link" href="/company.html">회사소개</a>
-        <a class="beta-menu-link" href="/contact.html">광고문의</a>
-      </div>
-
+        <div id="betaMenuPanel" class="beta-menu-panel hide">
+          <a class="beta-menu-link" href="/beta/ontu-stats.html">온투업 대출통계</a>
+          <a class="beta-menu-link" href="/beta/products/index.html">온투업 대출상품정보</a>
+          <a class="beta-menu-link" href="/beta/navi-beta.html">후추 네비게이션</a>
+          <a class="beta-menu-link" href="/company.html">회사소개</a>
+          <a class="beta-menu-link" href="/contact.html">광고문의</a>
+        </div>
       </div>
     </div>
   </header>
